# node-graph-editor

./: .gitignore  CMakeLists.txt  README.md  documentation.md  specification.md
data/: input.txt  input1.ps  input1.txt  input2.ps  input2.txt  input3.ps  input3.txt  input4.txt  input5.txt  input6.txt
graphEditor/: CMakeLists.txt
headers/: button.h  colors.h  command.h  edge.h  events.h  graph.h  input_window.h  layout.h  main_window.h  menu.h  node.h  text.h  texture.h  window.h
src/: button.cpp  button.h  command.cpp  command.h  edge.cpp  edge.h  events.cpp  events.h  graph.cpp  graph.h  graph_file_manager.cpp  helper_window.cpp  helper_window.h  input_window.cpp  input_window.h  layout.cpp  layout.h  main.cpp  main_window.cpp  main_window.h  menu.cpp  menu.h  node.cpp  node.h  text.cpp  text.h  texture.cpp  texture.h  window.cpp  window.h
